--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib",
-    "deno.enablePaths": [
-        "src/serve/deno.ts"
-    ]
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
