--- a/package.json
+++ b/package.json
@@ -1,51 +1,58 @@
 {
   "name": "@serebano/upi",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "type": "module",
   "module": "./dist/mod.js",
   "types": "./dist/mod.d.ts",
-  "repository": "https://github.com/serebano/upi",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/serebano/upi.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "import": "./dist/mod.js",
-      "default": "./src/mod.ts",
       "types": "./dist/mod.d.ts"
     },
     "./serve": {
       "import": "./dist/serve/index.js",
-      "default": "./src/serve/index.ts"
+      "types": "./dist/serve/index.d.ts"
     },
     "./serve/node": {
       "import": "./dist/serve/node.js",
-      "default": "./src/serve/node.ts"
+      "types": "./dist/serve/node.d.ts"
     },
     "./serve/deno": {
       "import": "./dist/serve/deno.js",
-      "default": "./src/serve/deno.ts"
+      "types": "./dist/serve/deno.d.ts"
     },
     "./serve/bun": {
       "import": "./dist/serve/bun.js",
-      "default": "./src/serve/bun.ts"
+      "types": "./dist/serve/bun.d.ts"
     }
   },
   "scripts": {
-    "dev:bun": "bun --watch --hot ./src/dev.ts",
-    "dev:deno": "deno --watch-hmr -A --env ./src/dev.ts",
+    "dev:bun": "bun --watch ./src/dev.ts",
+    "dev:deno": "deno --watch -A --env ./src/dev.ts",
     "dev:node": "tsx --watch ./src/dev.ts",
     "build": "pkgroll",
     "build:dev": "pkgroll --watch"
   },
   "dependencies": {
-    "@serebano/upi": ".",
+    "@types/bun": "^1.1.11",
+    "@types/deno": "latest",
+    "@types/node": "latest",
     "@whatwg-node/server": "^0.9.49"
   },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/deno": "latest",
-    "pkgroll": "^2.5.0",
-    "tsx": "^4.19.1"
-  },
+  "devDependencies": { "pkgroll": "^2.5.0", "tsx": "^4.19.1" },
   "peerDependencies": {
     "typescript": "^5.5.0"
-  }
+  },
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ]
 }
