--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
+    // "types": ["@types/node", "@types/deno", "@types/bun"],
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
